# rosu-ffi

./: Cargo.toml
.github/workflows/: build.yml
bindings/: rosu_ffi.cs  rosu_ffi.h  rosu_ffi.py
resources/: test.osu
src/: lib.rs  mods.rs
tests/: _mods_tests.rs  c_bindings.rs  csharp_bindings.rs  py_bindings.rs
